# exo-sense

./: .gitignore  AGENTS.md  README.md
.github/workflows/: backend.yml  ci.yml  deploy.yml  frontend.yml  integration.yml  ml.yml  quality.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  cloudrun.yaml  fastapi-backend.py  main.py  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt
api/core/: demo_data.py
api/models/: request.py  response.py
api/routers/: analyze.py  health.py  report.py  sonify.py
api/services/: model_service.py  sonification.py
api/tests/: __init__.py  test_analyze.py  test_main.py  test_model_service.py
docs/: architecture.md
exo-sense-api/: .env.example  Procfile  README.md  railway.json
frontend/: jest.config.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
frontend/__tests__/: page.test.tsx
frontend/app/: exo-sense.tsx  layout.tsx  page.tsx
frontend/app/components/: SonificationPanel.tsx  sonification-panel.tsx
frontend/app/utils/: sonification.ts
frontend/lib/: api.ts
frontend/src/types/: api.ts  lucide-react.d.ts  sonification.ts
ml/: README.md  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt  utils.py
ml/artifacts/: README.md  exoplanet_classifier.joblib
ml/data/: __init__.py
ml/detection/: __init__.py
ml/src/: __init__.py  utils.py
ml/src/data/: __init__.py  ingestion.py
ml/src/detection/: __init__.py  features.py  model.py  simulation.py  training.py  types.py
ml/src/vetting/: __init__.py
ml/src/visualization/: __init__.py
ml/tests/: __init__.py  test_features.py  test_ingestion.py  test_model.py  test_training_data.py  test_utils.py
ml/vetting/: __init__.py
scripts/: README.md  deploy-gcp.sh  fix-all.sh  pre-commit-checks.bat  pre-commit-checks.sh  verify-deployment.py  verify-gcp.py
